--- a/src/app/manager/navbar-manager/navbar-manager.component.html
+++ b/src/app/manager/navbar-manager/navbar-manager.component.html
@@ -47,7 +47,7 @@
       </ul>
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="#/login" class="btn btn-neutral btn-icon">
+          <a href="#/login" class="btn btn-neutral btn-icon" (click)="logout()">
             <span class="btn-inner--icon">
               <i class="fa fa-cloud-download mr-2"></i>
             </span>
