--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -118,7 +118,7 @@
                   </div> -->
                   <div class="row d-flex justify-content-around" *ngIf="employes.length != 0">
                     <div class="col-lg-12 text-center">
-                      <h6>no employe disponible</h6>
+                      <h6>Pas d'employé disponible</h6>
                     </div>
                     <div class="col-md-2" *ngFor="let employe of employes; let i = index">
                       <label class="image-checkbox text-center d-block mb-4">
@@ -170,7 +170,7 @@
                       <div class="col-md-3 card">
                         <div #external>
                           <p>
-                            <strong>Prenez le service et mettez le ou vous voulez</strong>
+                            <strong>Prenez le service et mettez-le où vous voulez</strong>
                           </p>
                           <div class='fc-event'>{{ service.nom }}</div>
                           <style>
@@ -449,7 +449,7 @@
     <div class="container">
       <div class="row justify-content-center text-center mb-lg">
         <div class="col-lg-8">
-          <h2 class="display-3">Les prefessionnel du service</h2>
+          <h2 class="display-3">Les professionnels du service</h2>
           <p class="lead text-muted">Rencontrez notre équipe dévouée d'experts prêts à vous servir ! Ce sont eux qui
             seront en mesure de vous prendre en charge pour ce service. Avec des années d'expérience et une passion pour
             l'excellence, ils sont là pour garantir votre satisfaction à chaque étape.</p>
