--- a/src/app/home-employe/landing.component.html
+++ b/src/app/home-employe/landing.component.html
@@ -144,7 +144,7 @@
 
                 <div *ngIf="rdvAujourdhui.length == 0">
                   <div class="row">
-                    <div class="col-md-12 text-center">aucun rendez-vous prevus pour aujourd hui</div>
+                    <div class="col-md-12 text-center">Aucun rendez-vous prévu pour aujourd'hui</div>
                   </div>
                 </div>
                 <hr>
@@ -185,7 +185,7 @@
 
                 <div *ngIf="rdvPREV.length == 0">
                   <div class="row">
-                    <div class="col-md-12 text-center">aucun rendez-vous prevus</div>
+                    <div class="col-md-12 text-center">Aucun rendez-vous prévu</div>
                   </div>
                 </div>
               </div>
@@ -203,7 +203,7 @@
           <!-- <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5"> -->
           <!-- <i class="ni ni-settings-gear-65"></i> -->
           <!-- </div> -->
-          <h3>vos rendez vous passe</h3>
+          <h3>Vos rendez-vous passé</h3>
           <hr>
           <a class="media d-flex align-items-center" *ngFor="let histor of rdvLASA">
             <div class="media-body ml-3">
@@ -243,7 +243,7 @@
     <div class="container">
       <div class="row justify-content-center text-center mb-lg">
         <div class="col-lg-8">
-          <h2 class="display-3">Les prefessionnel du service</h2>
+          <h2 class="display-3">Les professionnels du service</h2>
           <p class="lead text-muted">Rencontrez notre équipe dévouée d'experts prêts à vous servir ! Ce sont eux qui
             seront en mesure de vous prendre en charge pour ce service. Avec des années d'expérience et une passion pour
             l'excellence, ils sont là pour garantir votre satisfaction à chaque étape.</p>
