--- a/src/app/home-utilisateur/home.component.html
+++ b/src/app/home-utilisateur/home.component.html
@@ -22,7 +22,7 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
               <img src="./assets/img/brand/logoWrited.png" style="width: 200px;" class="img-fluid">
-              <p class="lead text-white">Votre Beaute, notre specialite, notre priorite</p>
+              <p class="lead text-white">Votre Beauté, notre spécialité, notre priorité</p>
             </div>
           </div>
         </div>
@@ -49,7 +49,7 @@
       <div class="container py-md">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-12 text-center">
-            <p class="lead text-white">faite vous plaisir avec nos offres de service Special</p>
+            <p class="lead text-white">Faites vous plaisir avec nos offres de services speciaux</p>
           </div>
         </div>
         <ngb-carousel>
@@ -96,7 +96,7 @@
 
 
   <div class="container" *ngIf="serviceCompetence.length != 0">
-    <h2 class="text-center mb-4">Les service qui pourais vos interesse</h2>
+    <h2 class="text-center mb-4">Les services qui pourraient vous intéresser</h2>
     <div class="row">
       <div class="col-lg-6 mb-4" *ngFor="let service of serviceCompetence">
         <div class="card bg-default shadow border-0">
