--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -46,7 +46,7 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-white pb-5">
               <div class="text-muted text-center mb-3">
-                <small>se connecter avec</small>
+                <small>Se connecter avec</small>
               </div>
               <div class="btn-wrapper text-center">
                 <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
@@ -65,7 +65,7 @@
             </div>
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
-                <small>ou se connecter avec vos identifiants</small>
+                <small>Ou se connecter avec vos identifiants</small>
               </div>
               <form role="form">
                 <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
@@ -93,7 +93,7 @@
                   </label>
                 </div> -->
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary my-4" (click)="login()">se connecter</button>
+                  <button type="button" class="btn btn-primary my-4" (click)="login()">Se connecter</button>
                 </div>
               </form>
             </div>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-6 text-right">
               <a href="#/register" class="text-light">
-                <small>cree un compte</small>
+                <small>Créer un compte</small>
               </a>
             </div>
           </div>
