--- a/src/app/manager/services/services.component.html
+++ b/src/app/manager/services/services.component.html
@@ -166,7 +166,7 @@
         <div class="col-lg-4 mb-4" *ngFor="let service of services | filter:searchText">
           <div class="card card-lift--hover shadow border-0 flex-fill">
             <div class="card-body py-5">
-              <div class="rounded-circle mb-4">
+              <!-- <div class="rounded-circle mb-4">
 
                 <img *ngIf="service.image !=='' && service.image !== null; else noImage"
                   [src]="urlImage + service.image" class="img-center img-fluid shadow shadow-lg--hover"
@@ -175,7 +175,7 @@
                   <img src="./assets/img/theme/team-1-800x800.jpg" class="img-center img-fluid shadow shadow-lg--hover"
                     style="width: 75px" />
                 </ng-template>
-              </div>
+              </div> -->
               <div class="text-center">
                 <h6 class="text-primary text-uppercase">{{ service.nom }}</h6>
                 <p class="description mt-3">
