--- a/src/app/manager/depenses/depenses.component.html
+++ b/src/app/manager/depenses/depenses.component.html
@@ -2,13 +2,14 @@
 
 <div class="alert-container">
   <div *ngFor="let alert of alerts">
-    <ngb-alert [type]="alert.type" [dismissible]="true" (close)="close(alert)">
+    <ngb-alert [type]="alert.type" [dismissible]="true" (close)="closeAlert(alert)">
       <ng-container *ngIf="alert.icon">
         <div class="alert-inner--icon">
-          <i class="{{alert.icon}}"></i>
+          <i class="{{ alert.icon }}"></i>
         </div>
       </ng-container>
-      <span class="alert-inner--text"> <strong>{{alert.strong}} </strong>{{ alert.message }}</span>
+      <span class="alert-inner--text">
+        <strong>{{ alert.strong }} </strong>{{ alert.message }}</span>
     </ngb-alert>
   </div>
 </div>
@@ -57,33 +58,44 @@
                 <span class="input-group-text"><i class="ni ni-credit-card"></i></span>
                 <span class="input-group-text">Type de dépense</span>
               </div>
-              <select class="form-control" [(ngModel)]="depenseType" *ngFor="let item of typeDepenses">
-                <option [value]="item._id">{{item.nomDepense}}</option>
-              </select>
+
+              <!-- <div class="input-group-prepend"> -->
+                <select class="form-control" [(ngModel)]="depenseType">
+                  <option *ngFor="let item of typeDepenses" [value]="item._id">{{ item.nomDepense }}</option>
+                </select>
+              <!-- </div> -->
+
+              <!-- <div> -->
+                <button (click)="open1(classic1, 'modal_mini', 'sm')" type="button" class="btn btn-default mb-mt-4">
+                  <i class="ni ni-fat-add"></i>
+                </button>
+              <!-- </div> -->
             </div>
-            <div class="form-group mb-4" [ngClass]="{'focused':focus===true}">
+            <div class="form-group mb-4" [ngClass]="{ focused: focus === true }">
               <textarea class="form-control form-control-alternative" [(ngModel)]="description" name="description"
-                rows="4" cols="80" placeholder="Description..." (focus)="focus=true" (blur)="focus=false"></textarea>
+                rows="4" cols="80" placeholder="Description..." (focus)="focus = true"
+                (blur)="focus = false"></textarea>
             </div>
-            <div class="form-group mb-4" [ngClass]="{'focused':focus2===true}">
+            <div class="form-group mb-4" [ngClass]="{ focused: focus2 === true }">
               <div class="input-group input-group-alternative">
                 <input class="form-control" placeholder="Montant" type="text" [(ngModel)]="montant"
-                  (focus)="focus2=true" (blur)="focus2=false">
+                  (focus)="focus2 = true" (blur)="focus2 = false" />
               </div>
             </div>
-            <div class="mb-4 form-group" [ngClass]="{'focused':focus3===true}">
+            <div class="mb-4 form-group" [ngClass]="{ focused: focus3 === true }">
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
                 </div>
                 <input class="form-control datepicker" placeholder="Date" id="date" name="dp1" [(ngModel)]="date"
-                  ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus3=true" (blur)="focus3=false"
-                  type="text" autocomplete="off" />
+                  ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus3 = true"
+                  (blur)="focus3 = false" type="text" autocomplete="off" />
               </div>
             </div>
             <div>
-              <button type="button" (click)="addDepenses()"
-                class="btn btn-default btn-round btn-block btn-lg">Enregistrer</button>
+              <button type="button" (click)="addDepenses()" class="btn btn-default btn-round btn-block btn-lg">
+                Enregistrer
+              </button>
             </div>
           </div>
         </div>
@@ -92,6 +104,36 @@
   </div>
 </section>
 
+<div class="col-md-4">
+  <ng-template #classic1 let-c="close" let-d="dismiss">
+    <div class="modal-content">
+      <div class="modal-body p-0">
+        <div class="card bg-secondary shadow border-0">
+          <div class="card-body px-lg-5 py-lg-5">
+            <div class="text-center text-muted mb-4">
+              <small>Ajouter un type de dépense</small>
+            </div>
+
+            <form>
+              <div class="form-group mb-3" [ngClass]="{ focused: focus4 === true }">
+                <label for="intitule">Type</label>
+
+                <div class="input-group input-group-alternative">
+                  <input class="form-control" id="intitule" name="intitule" [(ngModel)]="typeField" type="text"
+                    (focus)="focus4 = true" (blur)="focus4 = false" ngModel />
+                </div>
+              </div>
+
+              <div class="text-center">
+                <input type="submit" (click)="addTypeDepense()" class="btn btn-primary my-4" value="Ajouter" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</div>
 
 <div class="position-relative">
   <!-- shape Hero -->
@@ -108,10 +150,8 @@
   <!-- 1st Hero Variation -->
 </div>
 
-
 <section class="section section-lg pt-lg-0 mt--200">
   <div class="container">
-
     <div class="row justify-content-center">
       <h2>Toutes les dépenses</h2>
       <div class="col-lg-12">
@@ -124,7 +164,9 @@
 
               <select class="form-control" placeholder="Jour" [(ngModel)]="jour">
                 <option value="" disabled selected>Jour</option>
-                <option *ngFor="let day of days" [value]="day.value">{{ day.label }}</option>
+                <option *ngFor="let day of days" [value]="day.value">
+                  {{ day.label }}
+                </option>
               </select>
             </div>
           </div>
@@ -136,7 +178,9 @@
 
               <select class="form-control" placeholder="Mois" [(ngModel)]="mois">
                 <option value="" disabled selected>Mois</option>
-                <option *ngFor="let month of months" [value]="month.value">{{ month.label }}</option>
+                <option *ngFor="let month of months" [value]="month.value">
+                  {{ month.label }}
+                </option>
               </select>
             </div>
           </div>
@@ -148,20 +192,29 @@
 
               <select class="form-control" placeholder="Année" [(ngModel)]="annee">
                 <option value="" disabled selected>Année</option>
-                <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+                <option *ngFor="let year of years" [value]="year">
+                  {{ year }}
+                </option>
               </select>
             </div>
           </div>
 
           <div class="col-lg-3 col-sm-3 form-group">
-            <button class="btn btn-1 btn-primary btn-block" (click)="filtreDepense(mois, jour)"
-              type="button">Filtrer</button>
+            <button class="btn btn-1 btn-primary btn-block" (click)="filtreDepense(mois, jour)" type="button">
+              Filtrer
+            </button>
           </div>
         </div>
       </div>
-      <div class="col-lg-12" *ngIf="depenses && depenses.length > 0; else noDepenses">
+      <div class="row justify-content-center">
+        <div *ngIf="isLoadingDepense">
+          <!-- Ajoutez ici le code HTML ou le composant de votre icône de chargement -->
+          <i class="fa fa-spinner fa-spin"></i> Chargement des données 
+        </div>
+      </div>
+      <div class="col-lg-12" *ngIf="depenses && depenses.length > 0">
         <div class="row row-grid">
-          <div class="col-lg-4" *ngFor="let item of depenses; let i = index;">
+          <div class="col-lg-4" *ngFor="let item of depenses; let i = index">
             <div class="card card-lift--hover shadow border-0 mb-4">
               <div class="card-body py-5">
                 <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
@@ -169,21 +222,34 @@
                 </div>
                 <div class="text-center">
                   <h6 class="text-primary text-uppercase" *ngIf="item.depenseTypeID && item.depenseTypeID.nomDepense">
-                    {{item.depenseTypeID.nomDepense}}</h6>
-                  <p class="description mt-3">Description: {{item.description}}</p>
-                  <p class="description mt-3">Montant: {{item.montant}} Ariary</p>
-                  <p class="description mt-3">Date: {{item.date}}</p>
+                    {{ item.depenseTypeID.nomDepense }}
+                  </h6>
+                  <p class="description mt-3">
+                    Description: {{ item.description }}
+                  </p>
+                  <p class="description mt-3">
+                    Montant: {{ item.montant }} Ariary
+                  </p>
+                  <p class="description mt-3">Date: {{ item.date }}</p>
 
-                  <button (click)="deleteDepense(item._id)" class="btn btn-warning mt-4">Supprimer</button>
+                  <button (click)="deleteDepense(item._id)" class="btn btn-warning mt-4">
+                    Supprimer
+                  </button>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <ng-template #noDepenses>
+
+      <div class="col-lg-12" *ngIf="!isLoadingDepense && depenses && depenses.length === 0">
+        <div class="row row-grid">
+          <p>Aucune dépense à afficher.</p>
+        </div>
+      </div>
+      <!-- <ng-template #noDepenses>
         <p>Aucune dépense à afficher.</p>
-      </ng-template>
+      </ng-template> -->
     </div>
   </div>
 </section>
