--- a/src/app/manager/services/services.component.html
+++ b/src/app/manager/services/services.component.html
@@ -127,6 +127,10 @@
                     </label>
                   </div>
                 </div>
+                <div class="justify-content-center" *ngIf="isLoadingCompetence">
+                  <!-- Ajoutez ici le code HTML ou le composant de votre icône de chargement -->
+                  <i class="fa fa-spinner fa-spin"></i> Chargement des données 
+                </div>
               </div>
               
               <button type="button" (click)="addService()" class="btn btn-default btn-round btn-block btn-lg">
@@ -158,6 +162,12 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="justify-content-center">
+      <div *ngIf="isLoadingService">
+        <!-- Ajoutez ici le code HTML ou le composant de votre icône de chargement -->
+        <i class="fa fa-spinner fa-spin"></i> Chargement des données 
       </div>
     </div>
     <div class="col-lg-12">
